--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>King_Of_Melody</title>
-    <link rel="stylesheet" href="Image/main.css">
+    <link rel="stylesheet" href="assets/main.css">
 </head>
 <body>
     <div id="background">
