--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
     <link rel="stylesheet" href="assets/main.css">
 </head>
 <body>
-    <div id="background">
-        <div id="header">
+    <div id="header">
 
+    </div>
+
+    <div id="slidebar">
+
+    </div>
+
+    <div id="content">
+        <div class="menu">
+            <ul>
+                <li>CHẾ ĐỘ THƯỜNG</li>
+                <li>CHẾ ĐỘ XẾP HẠNG</li>
+                <li>THÀNH TÍCH</li>
+                <li>BẢNG XẾP HẠNG</li>
+            </ul>
         </div>
+    </div>
 
-        <div id="slidebar">
-
-        </div>
-
-        <div id="content">
-
-        </div>
-
-        <div id="footer">
-            
-        </div>
+    <div id="footer">
+        
     </div>
 </body>
 </html>
