--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>King_Of_Melody</title>
     <link rel="stylesheet" href="Image/main.css">
 </head>
 <body>
-    <div id="background">
-        <div id="header">
+    <div id="header">
 
-        </div>
+    </div>
 
-        <div id="slidebar">
+    <div id="slidebar">
 
-        </div>
+    </div>
 
-        <div id="content">
+    <div id="content">
+        <img src="Image/Speaker.png" alt="Speaker" class="speaker"> 
+        <!-- <img src="Image/Horror.png" alt="" class="horror"> -->
+        <a href="#" class="playclick">Chơi</a>
+    </div>
 
-        </div>
-
-        <div id="footer">
+    <div id="footer">
             
-        </div>
     </div>
 </body>
 </html>
