--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
 
     </div>
 
+    
     <div id="content">
-        <img src="Image/Speaker.png" alt="Speaker" class="speaker"> 
-        <!-- <img src="Image/Horror.png" alt="" class="horror"> -->
-        <a href="#" class="playclick">Chơi</a>
+        <div class="button">
+            <img src="Image/Speaker.png" alt="Speaker" class="speaker"> 
+            <!-- <img src="Image/Horror.png" alt="" class="horror"> -->
+            <a href="#" class="playclick">Chơi</a>
+        </div>
+        
     </div>
 
     <div id="footer">
