--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
 
     </div>
 
-    <div id="slidebar">
-
-    </div>
-
     <div id="content">
-        <div class="menu">
+        <div class="menubtn">
             <ul>
                 <li>CHẾ ĐỘ THƯỜNG</li>
                 <li>CHẾ ĐỘ XẾP HẠNG</li>
@@ -27,7 +23,7 @@
     </div>
 
     <div id="footer">
-        
+
     </div>
 </body>
 </html>
