--- a/headerweb.html
+++ b/headerweb.html
@@ -6,7 +6,7 @@
     </head>
     <body>
             <div class="logo">
-                <img src="../Hình/Logo_LTMCB.png" alt="" width="130" height="55">
+                <img src="assets/img/Logo_LTMCB.png" alt="" width="130" height="55">
             </div>
 
             <div class="cl2">
