--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <div class="ava">
                     <img src="assets/img/Avatar_header.jpg" alt="" >
                 </div>
-
                 <div class="player" >
                     <button class="button1">
                                 <b> Đăng nhập </b>
@@ -30,11 +29,6 @@
                     </button>
                 </div>
 
-            <!-- <div class="notification">
-                <button class="button2">
-                    <img src="assets/img/chuongtb_header.png" alt="" width="35" height="35">
-                </button>
-            </div> -->
         </div>
     </div>
 
@@ -50,10 +44,10 @@
         </div>
 
         <div class="button">
-            <div class="main"><img src="assets/img/Speaker.png"  alt="Speaker" class="speaker">
-                 </div>
-            <div class="main"><img src="assets/img/lonelygirl.jpg" alt="Lonely Girl" class="girl"></div>
+            <img src="assets/img/Speaker.png"  alt="Speaker" class="speaker">
+            <img src="assets/img/lonelygirl.jpg" alt="Lonely Girl" class="girl">
             <a href="#" class="playclick"><b>PLAY</b></a>
+            
         </div>
         
     </div>
