--- a/signin.html
+++ b/signin.html
@@ -48,7 +48,7 @@
                         <p>Nếu bạn đã có tài khoản, hãy click "Sign in" để đăng nhập vào chơi nhé!</p>
                         <button class="btn" id="sign-in-btn">Sign in</button>
                     </div>
-                    <img src="sign-in.svg" alt="" class="image">
+                    <img src="assets/img/sign-in.svg" alt="" class="image">
                 </div>
                 <div class="panel right-panel">
                     <div class="content">
@@ -56,7 +56,7 @@
                         <p>Nếu bạn chưa có tài khoản, hãy click "Sign up" để đăng ký nhé!</p>
                         <button class="btn" id="sign-up-btn">Sign up</button>
                     </div>
-                    <img src="sign-up.svg" alt="" class="image">
+                    <img src="assets/img/sign-up.svg" alt="" class="image">
                 </div>
             </div>
         </div>
