--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
                 </div>
                 <div class="player" >
                     <button class="button1">
-                                <b><a href="signin.html">Đăng nhập</a></b>
-                    </button>
-                    <button class="button1">
-                            <b> Đăng ký </b>
+                                <b><a href="signin.html">Đăng nhập/ Đăng ký</a></b>
                     </button>
                 </div>
 
@@ -57,7 +54,7 @@
                 <button class="menu_btn_btn">
                     <div class="menu_btn_dt">
                         <i class="fa-solid fa-gear"></i>
-                        <span><b>CÀI ĐẶT</b></span>
+                        <span><b><a href="setting.html">CÀI ĐẶT</a></b></span>
                     </div>
                 </button>
                 <button class="menu_btn_btn">
@@ -129,8 +126,8 @@
             </div>
 
             <div class="select_normal_mode_play_button">
-                <button type="submit"  class="playclick"><b>PLAY</b></button>
-                <button type="submit"  class="resumeclick"><b>RESUME</b></button>
+                <button type="submit"  class="playclick"><b><a href="playweb.html">PLAY</a></b></button>
+                <button type="submit"  class="resumeclick"><b><a href="#">RESUME</a></b></button>
             </div>
         </div>
 
@@ -184,7 +181,7 @@
                     </div>
 
                     <div class="select_rank_mode_play_button">
-                        <button type="submit"  class="playclick"><b>PLAY</b></button>
+                        <button type="submit"  class="playclick"><b><a href="playweb.html">PLAY</a></b></button>
                     </div>
                 </div>
 
@@ -306,7 +303,7 @@
                         <th class="avmth" id="shortestime">Shortesttime: 1s</th>
                     </tr>
                 </table>
-                <div><a href="#">Trờ lại</a></div>
+                <div><a href="#">Trở lại</a></div>
             </div>
         </div>
     </div>
