--- a/signin.html
+++ b/signin.html
@@ -22,7 +22,7 @@
                         <i class="fas fa-lock"></i>
                         <input type="password" placeholder="Password">
                     </div>
-                    <input type="submit" value="Login" class="btn">
+                    <input type="submit" value="Login" class="btn" id="submitBtn">
                 </form>
                 <form action="" class="sign-up-form">
                     <h2 class="title">Đăng ký</h2>
