--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="button">
             <img src="assets/img/Speaker.png"  alt="Speaker" class="speaker">
             <img src="assets/img/lonelygirl.jpg" alt="Lonely Girl" class="girl">
-            <a href="#" class="playclick"><b>PLAY</b></a>
+            <a href="playweb.html" class="playclick"><b>PLAY</b></a>
             
         </div>
         
@@ -127,7 +127,7 @@
 
             <div class="select_normal_mode_play_button">
                 <button type="submit"  class="playclick"><b><a href="playweb.html">PLAY</a></b></button>
-                <button type="submit"  class="resumeclick"><b><a href="#">RESUME</a></b></button>
+                <button type="submit"  class="resumeclick"><b><a href="playweb.html">RESUME</a></b></button>
             </div>
         </div>
 
