--- a/playweb-multi.html
+++ b/playweb-multi.html
@@ -24,6 +24,9 @@
                         <h2 class="player1-name">Player1's Name</h2>
                     </div>
                     <div class="round-time">
+                        <div class="btn-back">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </div>
                         <div class="round-info">
                             Round<br>
                             <h3>6/10</h3>
@@ -31,6 +34,10 @@
                         <div class="time-info">
                             Time<br>
                             <h3>12:30</h3>
+                        </div>
+                        <div class="room-info">
+                            Room<br>
+                            <h3>6969</h3>
                         </div>
                     </div>
                     <div class="player2-info">
