--- a/playweb.html
+++ b/playweb.html
@@ -67,6 +67,9 @@
             </div>
             <div class="play-area">
                 <div class="info">
+                    <div class="btn-back">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </div>
                     <div class="round-info">
                         Round<br>
                         <h3>6/10</h3>
